<resources>
    <string name="app_name">English Assistant</string>
    <string name="hello_world">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="APP_ID">1641425372746815</string>
    <string-array name="word_types">
        <item>None</item>
        <item>Đại từ</item>
        <item>Danh từ</item>
        <item>Động từ</item>
        <item>Tính từ</item>
        <item>Định ngữ</item>
        <item>Giới từ</item>
        <item>Liên từ</item>
        <item>Mạo từ</item>
        <item>Phó từ</item>
        <item>Thán Từ</item>
        <item>Thành ngữ</item>
    </string-array>
    <string name="word">Word</string>
    <string name="definition">Definition</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="example">Example</string>
    <string name="synonym">Synonym</string>
    <string name="oxford">Oxford Dictionary</string>
    <string name="plus">+</string>
    <string name="irregular">Irregular</string>
    <string name="infi">Infinitive</string>
    <string name="simple_past">Past</string>
    <string name="past_part">Past Part</string>
    <string name="major">Major</string>
    <string name="major_definition">Major Definition</string>
    <string name="title_activity_word">Word</string>
    <string name="title_activity_word_detail">WordDetail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="favorite">Favorites</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="wait">Please wait</string>
    <string name="no_result">No Result</string>
    <string name="filter_by">FILTER BY: </string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_favorite_week">Dashboard Week Favorite</string>
    <string name="dashboard_favorite_month">Dashboard Month Favorite</string>
    <string name="dashboard_overview_week">Dashboard Week Overview</string>
    <string name="dashboard_overview_month">Dashboard Month Overview</string>
    <string name="dashboard_games">Dashboard Games</string>
    <string name="current_week">Current Week</string>
    <string name="current_month">Current Month</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="yearly_report">Yearly Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="report">Report</string>
    <string name="summary">Summary</string>
    <string name="view_word">View Word</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="hear_voice">Hear Voice</string>
    <string name="wrong_choice">Total: </string>
    <string name="favorite_calander">Favorite Calendar</string>
    <string name="sel_date">Selected date: %s</string>
    <string name="add_favorite_word">Please add some favorite words before playing games</string>
    <string name="game_name">Game Name</string>
    <string name="single_word">Single Word</string>
    <string name="multiple_words">Multiple Words</string>
    <string name="choose_word">Choose Playing Word</string>
    <string name="chosen_word">Chosen Words</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="intro">Introduction</string>
    <string name="creadit">Credit</string>
    <string name="zero">0</string>
    <string name="information">Information</string>
    <string name="record">Record</string>
    <string name="player_score">Player Score</string>
    <string name="best_score">Best Score</string>
    <string-array name="single_game_names">
        <item>Parachutist</item>
        <item>On going</item>
        <item>On going</item>
        <item>On going</item>
        <item>On going</item>
    </string-array>
    <string-array name="multiple_game_names">
        <item>On going</item>
        <item>On going</item>
        <item>On going</item>
        <item>On going</item>
        <item>On going</item>
    </string-array>
    <string name="letter">Letter</string>
    <string name="life">Life</string>
    <string name="time">Time</string>
    <string name="score">Score: </string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="developer">Developer</string>
    <string name="reference">Reference</string>
    <string name="contact_us">Contact Us</string>
    <string name="free_to_contact">Please Feel Free To Contact Us</string>
    <string name="name_luong">Luong Truong Tran Quan</string>
    <string name="name_lap">Lap Nguyen Thiet</string>
    <string name="reference_database">Database</string>
    <string-array name="reference_database_array">
        <item>Ho Ngoc Duc and The Free Vietnamese Dictionary Project</item>
        <item>Oxford Dictionary (http://www.oxforddictionaries.com/)</item>
    </string-array>
    <string name="reference_database_original">Ho Ngoc Duc and The Free Vietnamese Dictionary Project</string>
    <string name="reference_database_oxford">Oxford Dictionary (http://www.oxforddictionaries.com/)</string>
    <string name="reference_library">Library</string>
    <string-array name="reference_library_array">
        <item>Robert Theis (https://github.com/rmtheis/)</item>
        <item>ViewPagerIndicator (http://viewpagerindicator.com/)</item>
        <item>Jsoup (http://jsoup.org/)</item>
        <item>AChartEngine (http://www.achartengine.org/)</item>
    </string-array>
    <string name="reference_library_OCR">Robert Theis (https://github.com/rmtheis/)</string>
    <string name="reference_library_viewpagerindicator">ViewPagerIndicator (http://viewpagerindicator.com/)</string>
    <string name="reference_library_jsoup">Jsoup (http://jsoup.org/)</string>
    <string name="reference_library_achartengine">AChartEngine (http://www.achartengine.org/)</string>
    <string name="reference_image">Image</string>
    <string-array name="reference_image_array">
        <item>http://www.flaticon.com/</item>
        <item>http://www.iconarchive.com/</item>
        <item>https://inkbluesky.wordpress.com/2010/06/</item>
        <item>http://www.graphicsfuel.com/</item>
        <item>http://www.clipartbest.com/</item>
        <item>http://www.graphicpanic.com/</item>
        <item>https://pixabay.com</item>
    </string-array>
    <string name="reference_image_flaticon">http://www.flaticon.com/</string>
    <string name="reference_image_iconarchive">http://www.iconarchive.com/</string>
    <string name="reference_image_inkbluesky">https://inkbluesky.wordpress.com/2010/06/</string>
    <string name="reference_image_graphicsfuel">http://www.graphicsfuel.com/</string>
    <string name="reference_image_clipartbest">http://www.clipartbest.com/</string>
    <string name="reference_image_graphicpanic">http://www.graphicpanic.com/</string>
    <string name="reference_image_pixabay">https://pixabay.com</string>
    <string name="reference_music">Music and Sound</string>
    <string-array name="reference_music_array">
        <item>http://www.freesfx.co.uk/</item>
    </string-array>
    <string name="reference_music_freesfx">http://www.freesfx.co.uk/</string>
    <string name="to">To: </string>
    <string name="subject">Subject: </string>
    <string name="message">Message: </string>
    <string name="help">Help</string>
    <string-array name="help_button">
        <item>Back to Search Page</item>
        <item>Capture your word</item>
        <item>Speech recognition</item>
        <item>Add favorite</item>
        <item>Hear voice</item>
        <item>See you favorite list via calendar</item>
    </string-array>
    <string-array name="help_tips">
        <item>You can choose FAVORITE WORDS for PLAYING GAME</item>
        <item>If you give WRONG ANSWER for a word in game. Its PRIORITY will INCREASE. Following, it may APPEAR on the TOP of the FAVORITE LIST.</item>
    </string-array>
    <string-array name="capturemodes">
        <item>Continuous</item>
        <item>Single shot</item>
    </string-array>
    <string-array name="pagesegmentationmodes">
        <item>Auto</item>
        <item>Auto (no OSD)</item>
        <item>Single block</item>
        <item>Single character</item>
        <item>Single column</item>
        <item>Single line</item>
        <item>Single word</item>
        <item>Vertical block</item>
        <item>Sparse text</item>
    </string-array>
    <string-array name="ocrenginemodes">
        <item>Tesseract</item>
        <item>Cube</item>
        <item>Both</item>
    </string-array>
    <string-array name="translators">
        <item>Bing Translator</item>
        <item>Google Translate</item>
    </string-array>
    <string-array name="languagenames">
        <item>Afrikaans</item>
        <item>Albanian</item>
        <item>Arabic</item>
        <item>Azeri</item>
        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        
        <item>Chinese (Simplified)</item>
        <item>Chinese (Traditional)</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Galician</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kannada</item>
        <item>Korean</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian (Latin)</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Tagalog</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Vietnamese</item>
    </string-array>
</resources>