<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txtWordV1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/infi"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtWordV2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/simple_past"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtWordV3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/past_part"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>