<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/txtWordAdapterWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:singleLine="true"
            android:text="@string/word"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtWordAdapterPronunciation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="end"
            android:singleLine="true"
            android:text="@string/pronunciation"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtWordAdapterDefinition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:text="@string/definition"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>