<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtSpeakingTimeGameTime"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|top"
        android:text="@string/zero"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/middle_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <ImageView
            android:id="@+id/imgSpeakingTimeBackward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/middle_line"
            android:src="@drawable/titlebar_backward" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtSpeakingTimeGameWord"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/word"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/txtSpeakingTimeGamePronunciation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/pronunciation"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgSpeakingTimeForward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/middle_line"
            android:src="@drawable/titlebar_forward" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/middle_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imgSpeakingTimeGameSpeaker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/ic_speaker" />

        <ImageView
            android:id="@+id/imgSpeakingTimeGameMic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/ic_microphone" />
    </LinearLayout>

</LinearLayout>